--- a/pay-ui/package.json
+++ b/pay-ui/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng-http-loader": "^0.6.0",
+    "ngx-bootstrap": "^2.0.0-rc.0",
     "primeng": "^5.0.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
